# repomix-copy

./: .gitignore  README.md  pyproject.toml  pytest.ini
.cursor/rules/: 001-code-advice-rules.mdc  002-design-patterns.mdc  003-package-usage.mdc  004-async-patterns.mdc  004-testing-practices.mdc  005-structured-inputs.mdc  006-uv-commands.mdc  007-command-validation.mdc  README.md  pyproject.toml
scripts/: arango_dump.sh  arango_restore.sh  backup_arango.sh  backup_before_stupid.sh  create_project_repo.sh  update_arangodb.sh
src/repomix/: __init__.py  __main__.py  cli.py  main.py  task.md
src/repomix/utils/: __init__.py  analyzer.py  cache.py  cache_manager.py  file_operations.py  file_utils.py  files.py  git.py  initialize_litellm_cache.py  json_utils.py  llm.py  models.py  multi_directory.py  parser.py  spacy_utils.py
test_output/commands/browsing/: response.json
tests/: conftest.py  test_basic_workflow.py  test_cache_manager.py  test_chunking.py  test_file_operations.py  test_file_utils.py  test_multi_directory.py  test_raycast_browsing.py
tests/basic_workflow/: test_workflow.py
tests/output/: concatenated.txt  response.json  test_response.json
tests/pipeline/: test_file_concatenation.py  test_file_discovery.py  test_llm_integration.py  test_repository_cloning.py  test_url_parsing.py
tests/raycast/: test_browsing.py
tests/tests/output/: concatenated.txt  response.json
