[project]
name = "repomix"
version = "0.1.0"
description = "Repository content mixer with LLM token counting"
requires-python = ">=3.8"
authors = [
    { name = "Robert", email = "robert@example.com" }
]
dependencies = [
    "click==8.1.7",
    "loguru==0.7.2",
    "litellm==1.16.9",
    "pathspec==0.12.1",
    "tiktoken==0.5.2",
    "importlib-metadata>=4.0.0",
    "python-dotenv>=0.19.0",
    "tenacity==8.2.3",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "setuptools>=75.3.0",
    "redis>=5.2.1",
    "gitpython>=3.1.44",
]

[project.optional-dependencies]
dev = [
    "types-click",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "black",
    "ruff"
]

[project.scripts]
repomix = "repomix.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repomix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-n auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["litellm.*", "tiktoken.*", "loguru.*"]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = []
src = ["src"] 
